# embedded-utils

./: .buildinfo  .gitignore  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Makefile  README.md  cmake_install.cmake  genindex.html  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
.doctrees/: environment.pickle  index.doctree
.github/workflows/: cmake.yml  codeql-analysis.yml  docs.yml
_sources/api/: index.rst.txt
api/: embedded_utils.html  index.html
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
include/embedded_utils/: queue.h  ring_buffer.h  utils.h
sphinx/.doctrees/: environment.pickle
sphinx/.doctrees/api/: embedded_utils.doctree  index.doctree
sphinx/_sources/api/: embedded_utils.rst.txt
src/: CMakeLists.txt  queue.c  ring_buffer.c
tests/: CMakeLists.txt
